--- a/src/assets/scss/pages/ieo/_buy-popup.scss
+++ b/src/assets/scss/pages/ieo/_buy-popup.scss
@@ -70,9 +70,9 @@
 	.capcha{
 		color: #191A39;
 		font-weight: 600;
-		font-size: 24px;
-		margin-top: 23px;
-		margin-bottom: 23px;
+    font-size: 24px;
+    margin: 0 auto;
+		padding: 23px 0;
 	}
 	.btn{
 
