--- a/src/app/ieo/components/ieo-info/ieo-info.component.html
+++ b/src/app/ieo/components/ieo-info/ieo-info.component.html
@@ -5,43 +5,61 @@
       <div class="fs-image-container">
 
       </div>
-      <div class="fs-content">
+      <div class="fs-content" *ngIf="IEOData">
         <div class="bittorrent">
           <img src="assets/img/ieo/bittorrent.svg" alt="">
         </div>
         <div class="btc-session">
           <div class="b-s-title">
-            <h3>BitTorent - BTC Session<span class="upcoming">Upcoming</span></h3>
-
+            <h3>{{IEOData.currencyDescription}} - BTC Session<span class="upcoming">{{IEOData.status}}</span></h3>
           </div>
           <table class="b-s-table">
             <tr>
               <td><span>Price：</span></td>
-              <td class="right-text"><span>To be determined</span></td>
+              <td class="right-text"><span>{{IEOData.rate ? IEOData.rate : 'To be determined'}}</span></td>
             </tr>
             <tr>
               <td>Start Time：</td>
-              <td class="right-text"><span>2019-05-19 19:00:00</span></td>
+              <td class="right-text"><span>{{getFormatDate(IEOData.startDate)}}</span></td>
             </tr>
             <tr>
               <td>Session Supply：</td>
-              <td class="right-text"><span>597,014,925 CELR</span></td>
+              <td class="right-text"><span>{{sessionSupply | roundCurrency: 'BTC' | formatCurrency: 'short': 'BTC'}} BTC</span></td>
             </tr>
           </table>
           <div class="buy-block">
-            <div class="amount">
-              <p>Amount: <span>597,014,925 BTT</span></p>
+
+            <div class="progress-block" *ngIf="stage.RUNNING === currentStage">
+              <div class="currency-info">
+                <div class="currency-buyed">
+                  <span class="buyed-value">{{boughtAmount | roundCurrency: 'BTC' | formatCurrency: 'short': 'BTC'}}</span>
+                  <span class="currency-name">{{IEOData.currencyName}}</span>
+                </div>
+                <div class="percentage">
+                  <span>{{boughtAmountPer}}%</span>
+                </div>
+              </div>
+              <div class="currency-bar">
+                <div class="currency-bar-progress" [style.width.%]="boughtAmountPer"></div>
+              </div>
             </div>
-            <div class="starts">
+
+            <div class="amount">
+              <p>Amount: <span>{{IEOData.amount}} {{IEOData.currencyName}}</span></p>
+            </div>
+
+            <div class="starts" *ngIf="stage.PENDING === currentStage">
               <p>Starts In:</p>
               <div class="timer" [innerHTML]="timer"></div>
-
             </div>
+
+
+
             <div class="button-part">
               <button
                 class="standart-btn"
                 *ngIf="isAuthenticated"
-                (click)="onBuy()"
+                (click)="onBuy.emit()"
               >
               <!-- [disabled]="currentStage !== stage.SALE" -->
                 <span>Buy Now</span>
@@ -61,9 +79,3 @@
   </div>
 </div>
 <!-- end component -->
-
-
-<app-popup-buy
-  [show]="showBuy"
-  (close)="closeBuy()"
-></app-popup-buy>
