--- a/src/app/ieo/ieo.component.html
+++ b/src/app/ieo/ieo.component.html
@@ -1,11 +1,18 @@
 <div class="ieo-container">
   <div class="ieo-header">
-    <app-ieo-header></app-ieo-header>
+    <app-ieo-header
+      [IEOData]="IEOData"
+      [userBalanceBTC]="userBalanceBTC"
+      (onBuy)="onBuy()"
+    ></app-ieo-header>
   </div>
   <app-ieo-info
     [isAuthenticated]="isAuthenticated"
     [currentStage]="currentStage"
+    [userBalanceBTC]="userBalanceBTC"
     (onLogin)="onLogin()"
+    (onBuy)="onBuy()"
+    [IEOData]="IEOData"
   ></app-ieo-info>
 
   <app-ieo-community [community]="ieoData.community"></app-ieo-community>
@@ -19,9 +26,19 @@
 
   <app-ieo-descriptions [description]="ieoData.description"></app-ieo-descriptions>
 
-  <button (click)="openNotification()">Notification</button>
+  <button (click)="openNoReqs()">Notification</button>
   <app-popup-notification
-    [show]="showNotification"
-    (close)="closeNotification()"
+    [show]="showNoReqs"
+    (close)="closeNoReqs()"
+    header="Ошибка верификации"
+    line1="проверьте верификацию и согласитесь с правилами"
+    btnText="Ок"
   ></app-popup-notification>
+  <app-popup-buy
+    [IEOData]="IEOData"
+    [userBalanceBTC]="userBalanceBTC"
+    [show]="showBuy"
+    (close)="closeBuy()"
+    (confirm)="confirmBuy($event)"
+  ></app-popup-buy>
 </div>
