--- a/src/app/ieo/components/ieo-info/ieo-info.component.html
+++ b/src/app/ieo/components/ieo-info/ieo-info.component.html
@@ -11,7 +11,7 @@
         </div>
         <div class="btc-session">
           <div class="b-s-title">
-            <h3>{{IEOData.currencyDescription}} - BTC Session<span class="upcoming">{{IEOData.status}}</span></h3>
+            <h3>{{IEOData.currencyDescription}} - BTC Session<span class="upcoming">{{IEOData.status | showStageStatus}}</span></h3>
           </div>
           <table class="b-s-table">
             <tr>
