--- a/src/app/ieo/components/ieo-info/ieo-info.component.html
+++ b/src/app/ieo/components/ieo-info/ieo-info.component.html
@@ -24,7 +24,7 @@
             </tr>
             <tr>
               <td>Session Supply：</td>
-              <td class="right-text"><span>{{sessionSupply | roundCurrency: 'BTC' | formatCurrency: 'short': 'BTC'}} BTC</span></td>
+              <td class="right-text"><span>{{(sessionSupply || 0) | roundCurrency: 'BTC' | formatCurrency: 'short': 'BTC'}} BTC</span></td>
             </tr>
           </table>
           <div class="buy-block">
@@ -58,6 +58,7 @@
             <div class="button-part">
               <button
                 class="standart-btn"
+                [disabled]="ieoLoading"
                 *ngIf="isAuthenticated"
                 (click)="onBuy.emit()"
               >
