--- a/src/app/ieo/ieo.component.html
+++ b/src/app/ieo/ieo.component.html
@@ -13,6 +13,7 @@
     (onLogin)="onLogin()"
     (onBuy)="onBuy()"
     [IEOData]="IEOData"
+    [ieoLoading]="ieoLoading"
   ></app-ieo-info>
 
   <app-ieo-community [community]="ieoData.community"></app-ieo-community>
@@ -20,6 +21,7 @@
   <app-ieo-requirements
     [isAuthenticated]="isAuthenticated"
     [requirements]="requirements"
+    (showPolicy)="openPolicy()"
   ></app-ieo-requirements>
 
   <app-ieo-how-it-works></app-ieo-how-it-works>
@@ -41,4 +43,16 @@
     (close)="closeBuy()"
     (confirm)="confirmBuy($event)"
   ></app-popup-buy>
+
+  <app-popup-policy
+    [show]="showPolicy"
+    (close)="closePolicy()"
+    (onAgree)="agreeWithPolicy()"
+  ></app-popup-policy>
+
+  <app-popup-success
+    [show]="showSuccess"
+    (close)="closeSuccess()"
+  >
+  </app-popup-success>
 </div>
