--- a/src/app/funds/balance/balance-table/balance-table.component.scss
+++ b/src/app/funds/balance/balance-table/balance-table.component.scss
@@ -162,3 +162,11 @@
   }
 }
 
+.balance-fiat{
+  background-color: #000;
+  .balance__currency-icon{
+    min-width: unset;
+    max-width: unset;
+    height: 14px;
+  }
+}
