--- a/src/assets/scss/components/_select.scss
+++ b/src/assets/scss/components/_select.scss
@@ -221,6 +221,7 @@
     margin-right: 8px;
     vertical-align: middle;
     line-height: 1.5;
+        margin-top: -3px;
     &--destop{
       display: none;
       @media(min-width: 1200px){
