--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -53,7 +53,7 @@
 
 
   <!--balance-desktop start-->
-  <div class="balance"  *ngIf="(breakpointService.breakpoint$ | async) === 'desktop'">
+  <div class="balance" [ngClass]="{'balance-fiat': currTab === Tab.FIAT}"  *ngIf="(breakpointService.breakpoint$ | async) === 'desktop'">
     <div class="page-title">
       <h1 class="page-title__text">
         {{'Balances' | translate}}
