--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -126,7 +126,7 @@
           ></app-dynamic-input>
         </ng-container>
         <app-dynamic-input
-        *ngSwitchCase="Tab.ICO"
+        *ngSwitchCase="Tab.IEO"
         [value]="currValue"
         [options]="[]"
         (onChange)="onChangeCurrPair($event)"
@@ -202,10 +202,10 @@
           <button
             [disabled]="loading$ | async"
             class="tabs__item"
-            [ngClass]="{'tabs__item--active': currTab === Tab.ICO}"
-            (click)="onSelectTab(Tab.ICO)"
+            [ngClass]="{'tabs__item--active': currTab === Tab.IEO}"
+            (click)="onSelectTab(Tab.IEO)"
             >
-            {{'ICO' | translate}}
+            {{'IEO' | translate}}
           </button>
         <button
         class="tabs__item"
@@ -291,15 +291,15 @@
             </app-qubera-table>
           </ng-container>
 
-            <app-ico-table
+            <app-ieo-table
               [countPerPage]="countPerPage"
               [countOfEntries]="getCountOfEntries() | async"
               [currentPage]="currentPage"
               [IEOData]="IEOData"
               [loading]="loading$ | async"
               (onPaginate)="onPageChanged($event)"
-              *ngSwitchCase="Tab.ICO"
-            ></app-ico-table>
+              *ngSwitchCase="Tab.IEO"
+            ></app-ieo-table>
 
 
         <!-- </div> -->
