--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -128,8 +128,8 @@
         </div>
       </li>
       <li class="menu__item">
-        <a class="menu__link" href="https://news.exrates.me" target="blank">
-          <span class="menu__link-text">{{'News' | translate}}</span>
+        <a class="menu__link" href="http://support.exrates.me" target="blank">
+          <span class="menu__link-text">{{'Support' | translate}}</span>
         </a>
       </li>
     </ul>
@@ -381,8 +381,8 @@
           </div>
         </div>-->
 
-        <a class="menu-mob__link" href="https://news.exrates.me" target="blank"><span
-          class="menu-mob__link-text">{{'News' | translate}}</span>
+        <a class="menu-mob__link" href="http://support.exrates.me" target="blank"><span
+          class="menu-mob__link-text">{{'Support' | translate}}</span>
         </a>
         <a class="menu-mob__link" (click)="setMobileWidget('chat')" [routerLink]="['dashboard']" [queryParams]="{widget: 'chat'}" *ngIf="isAuthenticated"><span
           class="menu-mob__link-text">{{'Chat' | translate}}</span>
