--- a/src/assets/scss/pages/ieo/ieo-first-screen.scss
+++ b/src/assets/scss/pages/ieo/ieo-first-screen.scss
@@ -6,7 +6,7 @@
 	font-weight: 400;
 	font-size: calc(.5715rem + .5721vw);
 	line-height: 1.37;
-	
+
 	color: var(--main-txt-color);
 }
 
@@ -67,7 +67,7 @@
 			text-align: center;
 			margin-bottom: .6em;
 		}
-		
+
 		h3{
 			display: inline-flex;
 			position: relative;
@@ -81,7 +81,7 @@
 		}
 	}
 	.upcoming{
-		position: absolute;
+		// position: absolute;
 		left: 100%;
 		margin-left: 15px;
 		font-weight: 400;
@@ -129,7 +129,7 @@
 				display: inline-block;
 				min-width: 10em;
 				text-align: left;
-				
+
 			}
 			&:nth-child(2){
 				color: #FFFFFF;
@@ -156,7 +156,7 @@
 	.amount{
 		margin-bottom: 1em;
 		p{
-			
+
 			font-weight: 500;
 			font-size: .8em;
 			color: #5E5F74;
@@ -218,25 +218,25 @@
 				&:before{
 					content: "day";
 				}
-				
+
 			}
 			&:nth-child(2){
 				&:before{
 					content: "hours";
 				}
-				
+
 			}
 			&:nth-child(3){
 				&:before{
 					content: "minutes";
 				}
-				
+
 			}
 			&:nth-child(4){
 				&:before{
 					content: "secunde";
 				}
-				
+
 			}
 			&:nth-child(2),&:nth-child(3){
 				&:after{
@@ -287,7 +287,7 @@
 			}
 		}
 
-		span{	
+		span{
 			font-size: 1.2em;
 			text-align: center;
 			color: #FFFFFF;
@@ -329,7 +329,7 @@
 				font-weight: 500;
 				font-size: .6em;
 				line-height: 1;
-				
+
 				color: #237BEF;
 			}
 		}
@@ -349,6 +349,6 @@
 			left: 0;
 			right: 0;
 			background: #237BEF;
-		}	
+		}
 	}
 }
