--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -73,3 +73,4 @@
 @import "pages/ieo/_buy-popup.scss";
 @import "pages/ieo/_popup-notification.scss";
 @import "pages/ieo/_ieo-header.scss";
+@import "pages/ieo/_ieo-notification.scss";
