--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -126,7 +126,7 @@
           ></app-dynamic-input>
         </ng-container>
         <app-dynamic-input
-        *ngSwitchCase="Tab.ICO"
+        *ngSwitchCase="Tab.IEO"
         [value]="currValue"
         [options]="[]"
         (onChange)="onChangeCurrPair($event)"
