--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -1381,6 +1381,7 @@ app-embedded-orders-mobile{
       &--arr-mob{
         padding-right: 19px;
         padding-left: 5px;
+            vertical-align: top;
       }
       &:first-child{
         padding-left: 14px;
