task 1880 program-minimum done

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -128,7 +128,7 @@
         </div>
       </li>
       <li class="menu__item">
-        <a class="menu__link" href="http://support.exrates.me" target="blank">
+        <a class="menu__link" (click)="supportRedirect()" target="blank">
           <span class="menu__link-text">{{'Support' | translate}}</span>
         </a>
       </li>
