--- a/src/app/funds/transaction-history/transaction-history.component.html
+++ b/src/app/funds/transaction-history/transaction-history.component.html
@@ -289,7 +289,7 @@
             </div>
           </td>
           <td class="table__cell">
-            <span>{{item.amount | roundCurrency: item.currencyName | formatCurrency}}</span>
+            <span>{{item.commissionAmount| roundCurrency: item.currencyName | formatCurrency}}</span>
           </td>
           <td class="table__cell">
             <span>{{item.amount | roundCurrency: item.currencyName | formatCurrency}}</span>
