added notifications compoent

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -89,10 +89,8 @@
         right: 6px;
       }
     }
-    .banner__btn span:hover{
-      path{
-        fill: #fff;
-      }
+    .banner__btn span:hover path{
+      fill: #fff;
     }
   </style>
   <div class="banner-content">
@@ -105,7 +103,7 @@
   </div>
 </article>
 
-<app-top-notification></app-top-notification>
+<app-notifications-list></app-notifications-list>
 <app-header></app-header>
 
 <div class="content">
