uncommented verification in settings

--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -33,13 +33,13 @@
             {{'Add Nickname' | translate}}
           </a>
         </li> -->
-        <!-- <li class="sidebar-menu__item">
+        <li class="sidebar-menu__item">
           <a class="sidebar-menu__link"
-             [routerLinkActive]="['sidebar-menu__link--active']"
-             [routerLink]="['/settings/verification']">
+            [routerLinkActive]="['sidebar-menu__link--active']"
+            [routerLink]="['/settings/verification']">
             Identity Verification
           </a>
-        </li> -->
+        </li>
         <!-- <li class="sidebar-menu__item">
           <a class="sidebar-menu__link"
              [routerLinkActive]="['sidebar-menu__link--active']"
