--- a/src/app/ieo/components/popup-buy/popup-buy.component.html
+++ b/src/app/ieo/components/popup-buy/popup-buy.component.html
@@ -57,7 +57,7 @@
 			<re-captcha (resolved)="afterResolvedCaptcha($event)" [siteKey]="recaptchaKey"></re-captcha>
 		</div>
     <button
-      class="btn btn--active btn--center"
+      class="btn btn--active btn--center btn-ieo"
       [disabled]="form.invalid || captchaInValid"
       (click)="confirmForm()"
     >Confirm</button>
