--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -74,3 +74,4 @@
 @import "pages/ieo/_popup-notification.scss";
 @import "pages/ieo/_ieo-header.scss";
 @import "pages/ieo/_ieo-notification.scss";
+@import "pages/ieo/_ieo-policy.scss";
