--- a/src/assets/scss/pages/ieo/_economic.scss
+++ b/src/assets/scss/pages/ieo/_economic.scss
@@ -12,19 +12,20 @@
 		width: 100%;
 		@media(max-width: 720px){
 			
-		overflow: auto;
+			overflow: auto;
 		}
 	}
 	.economics-table-wr{
-		    min-width: 570px;
-		    box-shadow: 4px 4px 9px rgba(0, 0, 0, 0.1);
+		min-width: 570px;
+		box-shadow: 4px 4px 9px rgba(0, 0, 0, 0.1);
 
 	}
 	.economics-table-item{
 		display: flex;
 		p{
-			font-size: .8em;
+			font-size: .95em;
 			color: #000;
+			line-height: 1.37;
 		}
 		&:nth-child(odd){
 			.table-item-description{
@@ -44,8 +45,8 @@
 		}
 	}
 	.table-item-description{
-		width: 25em;
-		padding: .85em 1em .85em 2em;
+		width: 21.7em;
+		padding: .67em 1em .68em 2em;
 		@media (max-width: 992px) {
 			width: 15em;
 		}
@@ -58,7 +59,7 @@
 		@media (max-width: 992px) {
 			width: 30em;
 		}
-		padding: .85em 1em .85em 2em;
+		padding: .67em 1em .68em 2em;
 		p{
 
 		}
