--- a/src/assets/scss/pages/ieo/_ieo_how_it_work.scss
+++ b/src/assets/scss/pages/ieo/_ieo_how_it_work.scss
@@ -1,9 +1,9 @@
 .ieo_how_it_work{
 	@media (max-width: 992px) {
-		font-size: 1.5em;
+		font-size: 1.6em;
 	}
 	.ieo_how_it_work-title{
-		margin-bottom: 1.6em;
+		    margin-bottom: 2.5em;
 		h3{
 			font-size: 1.2em;
 			@media (max-width: 992px) {
@@ -12,7 +12,7 @@
 		}
 	}
 	.ieo_how_it_work-wr{
-		padding: 2em 20px 4em;
+		    padding: 2.55em 20px 5.2em;
 		max-width: calc(73.7em + 40px);
 		margin: 0 auto;
 	}
@@ -46,7 +46,7 @@
 			height: 4em;
 			display: flex;
 			align-items: flex-end;
-			margin-bottom: 1.2em;
+			    margin-bottom: 1.5em;
 			@media (max-width: 992px) {
 				height: auto;
 				margin-bottom: 1em;
@@ -62,15 +62,16 @@
 				text-align: center;
 			}
 			h5{
-				font-size: .9em;
+				font-size: .95em;
 				text-transform: uppercase;
 				color: #FFFFFF;
 				font-weight: 500;
 				margin-bottom: .8em;
 			}
 			p{
-				font-size: .8em;
+				font-size: .87em;
 				color: #5E5F74;
+				font-weight: 500;
 
 			}
 		}
