--- a/src/assets/scss/pages/ieo/ieo-first-screen.scss
+++ b/src/assets/scss/pages/ieo/ieo-first-screen.scss
@@ -91,6 +91,7 @@
 		align-items: center;
 		top: .4em;
 		bottom: 0;
+		white-space: nowrap;
 		@media(max-width: 992px){
 			position: static;
 			padding-top: .25em;
