--- a/src/app/shared/components/date-mask-input/date-mask-input.component.scss
+++ b/src/app/shared/components/date-mask-input/date-mask-input.component.scss
@@ -14,6 +14,9 @@
     @media(max-width: 680px){
       height: 36px;
     }
+    @media(max-width: 380px){
+      padding-left: 3px;
+    }
     &:focus {
       outline: none;
       border: none;
