--- a/src/assets/scss/components/_datepicker.scss
+++ b/src/assets/scss/components/_datepicker.scss
@@ -8,6 +8,10 @@
   border: 1px solid #A0A0A0 !important;
   border-radius: 4px!important;
   font-size: 14px;
+  @media(max-width: 380px){
+    padding: 0 !important;
+    margin: 0 !important;
+  }
 }
 .mydp .selectiongroup *,.mydp .selector *{
 
@@ -19,6 +23,16 @@
 .selectiongroup {
   height: 100%;
   background-color: transparent !important;
+}
+
+@media(max-width: 380px){
+  .selbtngroup {
+    z-index: 111;
+  }
+
+  .btnclear.btnclearenabled.btnleftborderradius {
+    display: none;
+  }
 }
 
 .mydp .selection {
